# compressm

./: .gitignore  LICENSE  README.md  analyse.py  analyze_results.py  environment.yaml  main.py  pyproject.toml  run_experiment.py  train.py
cluster/: imdb-non-reduced.sub  imdb-reduced.sub
cluster/aan/: aan-non-reduced-adapted.sub  aan-non-reduced-test.sub  aan-non-reduced.sub  aan-reduced-test.sub  aan-reduced.sub
cluster/cifar/: cifar-distilled.sub  cifar-non-reduced-teacher.sub
cluster/imdb/: imdb-distilled.sub  imdb-non-reduced-165.sub  imdb-non-reduced-adapted.sub  imdb-non-reduced-teacher.sub  imdb-non-reduced-test.sub  imdb-non-reduced.sub  imdb-reduced-test.sub  imdb-reduced.sub
cluster/listops/: listops-non-reduced-adapted.sub  listops-non-reduced-test.sub  listops-non-reduced-timing.sub  listops-non-reduced.sub  listops-reduced-test.sub  listops-reduced.sub
cluster/pathfinder/: pathfinder-non-reduced-32.sub  pathfinder-non-reduced-adapted.sub  pathfinder-non-reduced-fix.sub  pathfinder-reduced.sub  (+4 more)
compressm/: __init__.py
configs/: scifar.yaml  smnist.yaml
data_dir/: dataloaders.py  datasets.py
dev/: kd_eval.py  lru_timing.py
experiment_runners/: mnist_runner.sh  red_mnist_runner.sh  red_scifar_runner.sh  scifar_runner.sh
models/: LRU.py  LTI_utils.py  dual_processing.py  generate_model.py  layers.py
scripts/: analyse_results.py  create_configs.py  create_distillation_configs.py  create_reduced_configs.py  create_reduced_sub_files.py  create_sub_files.py  preprocess_pathfinder.py  reproduce.py  train.py
training/: train.py  train_utils.py
(+531 files in other folders)
