[project]
name = "compressm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.1.0",
    "diffrax>=0.7.0",
    "einops>=0.8.1",
    "equinox>=0.13.0",
    "jax==0.6.2",
    "matplotlib==3.8.4",
    "numpy>=1.26.4",
    "optax==0.2.2",
    "pre-commit==3.7.1",
    "signax==0.1.1",
    "sktime>=0.38.5",
    "torch==2.3.1",
    "torchtext==0.18.0",
    "torchvision==0.18.1",
    "tqdm==4.66.4",
    "wandb>=0.22.0",
]

#[project.optional-dependencies]
#cu12 = [
#  "jax[cuda12]>=0.5.3",
#]

